--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
     <section class="hero">
         <figure>
-            <img src="img/Onion_Rava_Dosa@palates_desire-scaled.webp" alt="Tacos Delicioso" title="Rava Dosa!" width="1000"
+            <img src="img/Onion_Rava_Dosa@palates_desire-scaled.webp" alt="Rava Dosa" title="Rava Dosa!" width="1000"
                 height="667">
             <figcaption class="offscreen">
                 Try this Delicious Rava Dosa
