--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
     <section class="hero">
         <figure>
-            <img src="img/Mini-Masala-Dosas-RS-N.jpg" alt="Dosa Factory Dosas" title="Ready To Eat!"
+            <img src="https://cdn.tasteatlas.com/Images/Dishes/02d1f86ec5cd4f0db503f0653dc0c7e2.jpg?mw=1300" alt="Dosa Factory Dosas" title="Ready To Eat!"
                 width="1000" height="649">
             <figcaption class="offscreen">
                 Dosa Factory dosas
