--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
         <h2 class="hero__h2">Namaste!</h2>
         <figure>
-            <img src="https://www.finedininglovers.com/sites/g/files/xknfdk626/files/styles/recipes_1200_800/public/2023-02/Dosa%20recipe%20via%20Deepla%20Tamang%20Unsplash.jpeg.webp?itok=Ndju__bb" title="We love Dosa!" width="1000"
+            <img src="https://www.finedininglovers.com/sites/g/files/xknfdk626/files/styles/recipes_1200_800/public/2023-02/Dosa%20recipe%20via%20Deepla%20Tamang%20Unsplash.jpeg.webp?itok=Ndju__bb" alt="Dosa and chutney" title="We love Dosa!" width="1000"
                 height="667">
             <figcaption class="offscreen">
                 Dosa and chutney
